# feature-fabrica

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  feature_dependencies  pyproject.toml  setup.py
.github/workflows/: pre-commit-checks.yml  run-unit-tests.yml
examples/: aggregated_features.yaml  basic_features.yaml  custom_transform.yaml  import_features.yaml  math_features.yaml  nested_features.yaml
feature_fabrica/: core.py  exceptions.py  models.py  promise_manager.py  transform.py  utils.py  yaml_parser.py
feature_fabrica/_internal/: compute.py
feature_fabrica/_internal/instantiate/: _instantiate.py
feature_fabrica/_internal/instantiate/expressions/: fefa_expressions.py  math_expressions.py  utils.py
feature_fabrica/models/: __init__.py  arrays.py  data_struct.py  execute.py  features.py
feature_fabrica/transform/: NLP.py  __init__.py  aggregate.py  base.py  datetime.py  feature_extraction.py  generic.py  importer.py  math.py  registry.py  string.py  utils.py
tests/: test_aggregate_transform.py  test_core.py  test_custom_transform.py  test_datetime_transform.py  test_feature_extraction.py  test_feature_value.py  test_generic_transforms.py  test_math_transform.py  test_nlp_transform.py  test_string_transform.py  test_transform.py
use_cases/: adult_income_classification.ipynb
utils/: benchmark.py
